# NAO

./: README.md
Vision/: ex.py  main.cpp
Vision/onfacedetection (copy)/: CMakeLists.txt  main.cpp  onfacedetection.cpp~  onmarkdetection.cpp  onmarkdetection.h  onmarkdetection.html  onmarkdetection.rst  qiproject.xml
Vision/onfacedetection (copy)/build-naoqi-sdk/: CMakeCache.txt  Makefile
Vision/onfacedetection (copy)/build-sys-linux-x86_64/: CMakeCache.txt  dependencies.cmake
naoqi/doc/: .buildinfo  contents.html  cpp-classindex.html  cpp-funcindex.html  genindex.html  glossary.html  index.html  naoqi-eventindex.html  naoqi-memoryindex.html  objects.inv  search.html  searchindex.js
naoqi/doc/.doctrees/: contents.doctree  cpp-classindex.doctree  cpp-funcindex.doctree  environment.pickle  glossary.doctree  index.doctree  naoqi-eventindex.doctree  naoqi-memoryindex.doctree
naoqi/doc/dev/: example-index.html  index.html  sdk.html
naoqi/doc/family/: body_type.html  index.html
naoqi/doc/getting_started/: helloworld_choregraphe.html  helloworld_choregraphe_script.html  helloworld_python.html  helloworlds.html  index.html  software_in_and_out.html
naoqi/doc/legal/: notice.html
naoqi/lib/: libopencv_calib3d.so.2.3.1  libopencv_contrib.so.2.3.1  libopencv_core.so.2.3.1  libopencv_features2d.so.2.3.1  libopencv_flann.so.2.3.1  libopencv_gpu.so.2.3.1  libopencv_highgui.so.2.3.1  libopencv_imgproc.so.2.3.1  libopencv_legacy.so.2.3.1  libopencv_ml.so.2.3.1  libopencv_objdetect.so.2.3.1  libopencv_ts.so.2.3.1  libopencv_video.so.2.3.1  scanmatchingwrap.py
(+1765 files in other folders)
